# poundcake

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  API_ENDPOINTS.txt  Dockerfile  Makefile  README.md  alembic.ini  dev-requirements.txt  docker-compose-poundcake-only.yml  docker-compose.yml  docker-compose.yml.new  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup-apikey.sh
.github/workflows/: build-push.yaml  ci.yaml  docs-pages.yaml  manual-build-push.yaml  release.yaml
alembic/: env.py
alembic/versions/: 2026_02_03_1600_initial_schema.py  2026_02_16_2300_reconcile_legacy_recipe_ingredient_schema.py  2026_02_18_1700_add_bakery_ticket_operation_fields.py  2026_02_19_0900_add_alert_suppression_tables.py
api/: README.md  __init__.py  main.py  migrate.py  types.py  version.py
api/api/: __init__.py  auth.py  communications_policy.py  cook.py  dishes.py  health.py  ingredients.py  internal_stackstorm.py  mappings.py  observability.py  orders.py  ovens.py  prometheus.py  recipes.py  repo_sync.py  routes.py  settings.py  stackstorm.py  suppressions.py  webhook.py
api/core/: config.py  database.py  http_client.py  httpx_utils.py  logging.py  metrics.py  middleware.py  startup_checks.py  statuses.py
api/models/: models.py
api/schemas/: __init__.py  query_params.py  schemas.py
api/scripts/: ensure_alpha_schema.py  entrypoint-auto-migrate.sh  entrypoint.sh  init_database.py  reconcile_schema.py
api/services/: __init__.py  alert_rule_repo.py  auth_service.py  bakery_client.py  bakery_collectors.py  bakery_monitor.py  bakery_payloads.py  bakery_secret_store.py  bootstrap_ingredient_catalog.py  bootstrap_recipe_catalog.py  bootstrap_remote_recipe_sync.py  communication_canonical.py  communications.py  communications_policy.py  dish_planner.py  dishwasher_service.py  execution_orchestrator.py  execution_types.py  fallback_recipe.py  git_manager.py  incident_reconciliation.py  mapping_service.py  order_communications.py  oven.py  pack_sync_service.py  pre_heat.py  prometheus_crd_manager.py  prometheus_rule_manager.py  prometheus_service.py  recipe_ingredient_cleanup.py  release_update_notifications.py  repo_sync_service.py  stackstorm_service.py  suppression_service.py  watchdog_heartbeat.py
api/tasks/: __init__.py  alert_tasks.py  tasks.py
api/validation/: __init__.py  execution.py  query_params.py
bakery/: Dockerfile  README.md  __init__.py  alembic.ini  auth.py  config.py  database.py  db_init.py  formatters.py  main.py  metrics.py  models.py  requirements.txt  schemas.py  structlog_compat.py  worker.py
bakery/adapters/: __init__.py  base.py  factory.py  github.py  jira.py  pagerduty.py  rackspace_core.py  servicenow.py
bakery/alembic/: env.py
bakery/api/: __init__.py  communications.py  health.py  messages.py  mixers.py  tickets.py
bakery/mixer/: __init__.py  base.py  discord.py  jira.py  (+6 more)
cli/: __init__.py  client.py  main.py  session.py  utils.py
config/: README.md  alertmanager.example.yml  hello-world-alert.json  prometheus.example.yml
contracts/: __init__.py  base.py  common.py  communications.py  generate_artifacts.py  poundcake.py
docker/: docker-compose.yml
docs/: ALEMBIC_QUICKREF.md  ALERTMANAGER_PAYLOAD_TEMPLATE.md  API_ENDPOINTS.md  ARCHITECTURE.md  AUTH.md  AUTH0.md  AZURE_AD.md  CLI.md  CLI_GUIDE.md  DATABASE_MIGRATIONS.md  DEPLOY.md  DEVELOPER.md  DOCKER_INSTALL.md  GETTING_STARTED.md  INSTALL.md  MIGRATION_COMPLEX_TO_SIMPLE.md  REFERENCE.md  REMOTE_BAKERY_DEPLOYMENT_GUIDE.md  REMOTE_BAKERY_QUICKSTART.md  SAMPLE_PAYLOADS.md  STACKSTORM_INTEGRATION.md  STACKSTORM_MARIADB_INSTALL.md  TROUBLESHOOTING.md  bootstrap-quick-fix-guide.md  developer.md  index.md
examples/: README.md  alert-critical.json  alert-firing.json  alert-multiple.json  alert-resolved.json  recipe-hostdown.json  test-basic.json
helm/: Chart.yaml  Makefile  README.md  values.schema.json  values.yaml
install/: install-bakery-helm.sh  install-docker.sh  install-helm.sh  install-poundcake-helm.sh  set-env-helper.sh
kitchen/: README.md  __init__.py  chef.py  dishwasher.py  execution_segments.py  prep_chef.py  service_helpers.py  timer.py
oven/: README.md  oven.py  oven_service.py
scripts/: README.md  WEBHOOK_TESTING_GUIDE.md  api_cli_tester.py  automated-setup.sh  clean-config.sh  diagnose-st2.sh  fix-init-db.sh  fix.sh  generate_bootstrap_recipes_from_rules.py  init-db.sh  migrate.py  oven.py  oven_scheduler.py  quickstart.sh  setup-apikey.sh  setup-dev-env.sh  setup.sh  st2client-help.sh  test-local.sh  test-specification.py  test-webhook.sh  testall.sh  timer.py  troubleshoot-st2-registration.sh
shared/: __init__.py  bakery_contract.py  env.py  hmac.py  http_retry.py  version.py
tests/: README.md  conftest.py  lib.sh  lint_shell_tests.sh  run_all_e2e_workflow_generation_tests  run_all_tests.sh  run_e2e.sh  run_fallback_unmatched_alert_bakery_observation_test  run_host_down_expected_failure_test  run_multiple_tasks_non_blocking_test  run_multiple_tasks_with_blocking_test  run_reuse_recipe_two_webhooks_test  run_single_task_manual_order_test  run_single_task_non_blocking_test  run_single_task_webhook_counter_increment_test  test_alembic_helm_sync.py  test_api.py  test_api_auth_rbac.py  test_api_communications_policy.py  test_api_health.py  test_api_observability.py  test_api_orders_dishes.py  test_api_prometheus.py  test_api_recipes.py  test_api_settings.py  test_api_suppressions.py  test_api_webhook_contract.py  test_assert_dish_count.sh  test_assert_order_status.sh  test_assert_resolving_dish_bakery_only.sh  test_assert_task_sequence.sh  test_auth_cookie_security.py  test_auth_observed_principal.py  test_auth_principal_search_contract.py  test_auth_provider_metadata.py  test_azure_ad_auth.py  test_bakery_auth.py  test_bakery_collectors.py  test_bakery_communications.py  test_bakery_db_init.py  (+93 more)
timer/: README.md  __init__.py  timer.py
ui/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
workers/: README.md  __init__.py  dispatcher.py  executor.py  timer.py
(+417 files in other folders)
