[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poundcake-api"
version = "1.0.0"
description = "FastAPI application for processing Alertmanager webhooks with Celery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "api.api.*",
    "api.main",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "api.tasks.*",
    "api.services.*",
]
# Ignore SQLAlchemy Column assignment issues
warn_return_any = false
# Allow Celery task decorators without full type annotations
disallow_untyped_defs = false
# Disable problematic error codes for SQLAlchemy ORM code
disable_error_code = ["assignment", "arg-type", "call-overload", "misc", "var-annotated", "dict-item", "type-var", "return-value", "union-attr"]

[[tool.mypy.overrides]]
module = ["api.core.logging", "api.core.middleware"]
# Ignore pythonjsonlogger and SQLAlchemy type issues
disable_error_code = ["assignment", "no-any-return"]

[[tool.mypy.overrides]]
module = [
    "api.api.health",
    "api.api.routes",
    "api.api.auth",
    "api.api.v1.*",
]
# Ignore SQLAlchemy and Celery type issues in API modules
disable_error_code = ["assignment", "arg-type", "call-overload", "var-annotated", "return-value"]

[[tool.mypy.overrides]]
module = [
    "kubernetes",
    "kubernetes.*",
    "git",
    "git.*",
    "celery",
    "celery.*",
    "api.models.models_simple",
    "api.tasks.tasks_simple",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
