#  ___                        _  ____      _
# |  _ \ ___  _   _ _ __   __| |/ ___|__ _| | _____
# | |_) / _ \| | | | '_ \ / _` | |   / _` | |/ / _ \
# |  __/ (_) | |_| | | | | (_| | |__| (_| |   <  __/
# |_|   \___/ \__,_|_| |_|\__,_|\____\__,_|_|\_\___|
#
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poundcake-api"
version = "0.0.1"
description = "FastAPI application for processing Alertmanager webhooks with StackStorm integration"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-json-logger>=3.2.0",
    "python-multipart>=0.0.18",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.2",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
    "types-python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "api.api.*",
    "api.main",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "api.tasks.*",
    "api.services.*",
]
# Ignore SQLAlchemy Column assignment issues
warn_return_any = false
# Allow Celery task decorators without full type annotations
disallow_untyped_defs = false
# Disable problematic error codes for SQLAlchemy ORM code
disable_error_code = ["assignment", "arg-type", "call-overload", "misc", "var-annotated", "dict-item", "type-var", "return-value", "union-attr"]

[[tool.mypy.overrides]]
module = ["api.core.logging", "api.core.middleware"]
# Ignore pythonjsonlogger and SQLAlchemy type issues
disable_error_code = ["assignment", "no-any-return"]

[[tool.mypy.overrides]]
module = [
    "api.api.health",
    "api.api.routes",
    "api.api.recipes",
    "api.api.auth",
    "api.api.v1.*",
]
# Ignore SQLAlchemy and Celery type issues in API modules
disable_error_code = ["assignment", "arg-type", "call-overload", "var-annotated", "return-value"]

[[tool.mypy.overrides]]
module = [
    "kubernetes",
    "kubernetes.*",
    "git",
    "git.*",
    "celery",
    "celery.*",
    "api.models.models_simple",
    "api.tasks.tasks_simple",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running server and database)",
]
# Skip integration tests by default in CI
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''
